--- a/uni/sozi/1.md
+++ b/uni/sozi/1.md
@@ -37,8 +37,9 @@ Theorie des „politischen Konfessionalismus“ (Walter Dean Burnham):
 - hebt wie der "klassentheoretische Erklärungsansatz" den mittelständischen, "bürgerlich-protestantischen" Charakter der NSDAP
 - hebt wie der "massentheoretische Erklärungsansatz" die immunisierende Funktion soziokultureller, milieuvermittelter Bindungen und die Ansicht, dass auch die DNVP Anhänger an die NSDAP abgeben musste, hervor
 - Jungwähler und ehem. Nichtwähler haben allerdings keine so entscheidende Rolle wie in den anderen Erklärungsversuchen gespielt
-<br>
 
+&nbsp;
+&nbsp;
 | Wahlpaar    | Klassentheoretischer Ansatz (Lipset)                                                                                                        | Massentheoretischer Ansatz (Bendix, Arendt)                                                                                                   | Konfessionstheoretischer Ansatz (Burnham)                                                                                                      |
 |-------------|---------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------|
 | 1928/1930   | Aufstieg: Folge des Rückgangs der liberalen Parteien und der Regionalparteien, nicht jedoch der DNVP                                        | Aufstieg: Folge des Anstiegs der Wahlbeteiligung, der DNVP-Verluste und der Jungwählerpräferenzen                                             | Aufstieg: Folge des Anstiegs der Wahlbeteiligung und der Verluste der bürgerlichen, konservativen & liberalen Parteien                         |
@@ -63,12 +64,12 @@ Methodische Anforderung an die historische Wahlforschung
 - Prozentuierung möglichst auf die gleiche Basis (Wahlberechtigte)
 - Anwendung multivariater Analyseverfahren
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+&nbsp;
+&nbsp;
+&nbsp;
+&nbsp;
+&nbsp;
+&nbsp;
 
 #### Zu welchem Befunden gelangte Jürgen Falter in „Hitlers Wähler“ in Bezug auf den Zusammenhang zwischen Arbeitslosigkeit und der Wahl der NSDAP?
 Wenn man auf die prozentualen Zahlen schaut und in einem groben Zeitraum den Verlauf der  NSDAP Stimmenanteile beobachtet und die Arbeitlosenzahlen hinzuzieht, scheint es als gäbe es einen engen positiven Zusammenhang zwischen beiden Kurven. Bei einer detaillierten Betrachtung ist zu erkennen, dass die Arbeitslosigkeit nicht im selben Maß wie der Stimmenzuwachs der Nsdap anstieg. Bei Betrachtung der Zahlen aus den Quartilen ist gar zu erkennen, das die Nsdap mehr Wählerstimmen gewann als in der Relation die Arbeitslosigkeit stieg. Im Gegenteil ist es möglich zu sagen, dass bei steigender Arbeitslosigkeit der Stimmenzuwachs der Nsdap sank, womit die Aussage das die Arbeitslosen die Nsdap zum Wahlerfolg führten widerlegt wäre.
