--- a/uni/sozi/1.md
+++ b/uni/sozi/1.md
@@ -40,6 +40,7 @@ Theorie des „politischen Konfessionalismus“ (Walter Dean Burnham):
 
 &nbsp;
 &nbsp;
+
 | Wahlpaar    | Klassentheoretischer Ansatz (Lipset)                                                                                                        | Massentheoretischer Ansatz (Bendix, Arendt)                                                                                                   | Konfessionstheoretischer Ansatz (Burnham)                                                                                                      |
 |-------------|---------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------|
 | 1928/1930   | Aufstieg: Folge des Rückgangs der liberalen Parteien und der Regionalparteien, nicht jedoch der DNVP                                        | Aufstieg: Folge des Anstiegs der Wahlbeteiligung, der DNVP-Verluste und der Jungwählerpräferenzen                                             | Aufstieg: Folge des Anstiegs der Wahlbeteiligung und der Verluste der bürgerlichen, konservativen & liberalen Parteien                         |
@@ -64,6 +65,10 @@ Methodische Anforderung an die historische Wahlforschung
 - Prozentuierung möglichst auf die gleiche Basis (Wahlberechtigte)
 - Anwendung multivariater Analyseverfahren
 
+&nbsp;
+&nbsp;
+&nbsp;
+&nbsp;
 &nbsp;
 &nbsp;
 &nbsp;
