--- a/uni/sozi/1.md
+++ b/uni/sozi/1.md
@@ -42,6 +42,10 @@ Theorie des „politischen Konfessionalismus“ (Walter Dean Burnham):
 
 &nbsp;
 
+&nbsp;
+
+&nbsp;
+
 
 | Wahlpaar    | Klassentheoretischer Ansatz (Lipset)                                                                                                        | Massentheoretischer Ansatz (Bendix, Arendt)                                                                                                   | Konfessionstheoretischer Ansatz (Burnham)                                                                                                      |
 |-------------|---------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------|
