--- a/uni/sozi/7.md
+++ b/uni/sozi/7.md
@@ -19,12 +19,12 @@ Typologie setzt konventionelle politische Partizipation in Beziehung zum pol. Pr
   - je nach Kombination der Dimensionen erfolgt die Zuordnung zu den oben aufgeführten Aktionsstilen
     - so gehören beispielsweise Individuen die keine der aufgeführten Tätigkeiten ausführen oder lediglich über Politik in der Zeitung lesen und eine Petition unterschreiben würden dem Typus der Inactives also Nicht-Partizipierenden an
 
-|                                                                                        | None of these Activites | Read about Politics in Newspapers | Discuss Politics with Friends | Work with other People in the Community | Work for Political Party or Candidate | Convince Friends to Vote the same Way as You | Attend Political Meetings / Rallies | Contact Public Officials | Non-scalable Respondents |
-|----------------------------------------------------------------------------------------|-------------------------|-----------------------------------|-------------------------------|-----------------------------------------|---------------------------------------|----------------------------------------------|-------------------------------------|--------------------------|--------------------------|
-| None of these Activites                                                                | 1                       | 1                                 | 2a                            | 2a                                      |  2b                                   |  2b                                          |  2b                                 |  2b                      |                          |
-| Attending Lawful Demonstrations / Joining in Boycotts                                  | 5a                      | 5a                                | 3a                            | 3a                                      |  3b                                   |  3b                                          |  3b                                 |  3b                      |                          |
-| Refuse to Pay Rent or Taxes / Occupy Buildings / Block traffic / Join Wildcast Strikes | 5b                      | 5b                                | 4a                            | 4a                                      |  4b                                   |  4b                                          |  4b                                 |  4b                      |                          |
-| Non-scalable Respondens                                                                |                         |                                   |                               |                                         |                                       |                                              |                                     |                          | 6                        |
+|  | None of these Activites | Read about Politics in Newspapers | Discuss Politics with Friends | Work with other People in the Community | Work for Political Party or Candidate | Convince Friends to Vote the same Way as You | Attend Political Meetings / Rallies | Contact Public Officials |
+|----------------------------------------------------------------------------------------|-------------------------|-----------------------------------|-------------------------------|-----------------------------------------|---------------------------------------|----------------------------------------------|-------------------------------------|--------------------------|
+| None of these Activites | 1 | 1 | 2a | 2a |  2b |  2b |  2b |  2b |
+| Attending Lawful Demonstrations / Joining in Boycotts | 5a | 5a | 3a | 3a |  3b |  3b |  3b |  3b |
+| Refuse to Pay Rent or Taxes / Occupy Buildings / Block traffic / Join Wildcast Strikes | 5b | 5b | 4a | 4a |  4b |  4b |  4b |  4b |
+| Non-scalable Respondens |  |  |  |  |  |  |  | 6 |
 
 #### Mit welchen besonderen methodischen Schwierigkeiten sahen sich die Forscher der „Political Action“-Studie bei der Messung des politischen Protestpotentials konfrontiert (insbesondere im Vergleich zur Messung konventioneller politischer Partizipation)?
 Mangel an Studien & Arbeiten zu politischen Protesten in westlichen Demokratien
