--- a/uni/sozi/8.md
+++ b/uni/sozi/8.md
@@ -1,1 +1,46 @@
+# 8. Sitzung: Bowling Alone (Simon & Schuster)
+Entstehungskontext:
+- Protest - und Studentenbewegungen der 1960er Jahre und Neue Soziale Bewegungen der 1970er/1980er haben Hoffnung auf stark steigende Partizipationsbereitschaft der Menschen gemacht
+  - tatsächlich ging die Beteiligungsbereitschaft der Menschen seit Ende der 60er jedoch deutlich zurück
 
+## Klausurfragen 
+#### Was versteht Robert Putnam unter dem Begriff des Sozialkapitals? Welche verschiedenen Formen unterscheidet er?  
+ "Social capital refers to connections among individuals, social networks and the norm of reciprocity and trusthworthiness that arise from them"
+
+Der Begriff "Soziales Kapital" wurde laut Putnam im 20.Jhd von mind. 6 versch. Autoren "erfunden"
+- die wichtigsten seien dabei Pierre Bourdieau und James S. Coleman gewesen
+
+Sozialkapital hat nach Putnam "a private face and a public face"
+- es ist gleichzeitig ein privates und ein öffentliches Gut
+
+Putnam definiert Bonding (exclusive) und Bridging (inclusive) Social Capital
+- "Bonding social capital is good for undergirding specific reciprocity and mobilizing solidarity"
+- "Bridging networks, by contrast, are better for linkage to external assets and for information diffusion"
+- "Bonding social capital is good for 'getting by', but bridging social capital is good for 'getting ahead'"
+
+#### Wie untersucht Robert Putnam seine These von der Erosion des Sozialkapitals empirisch? Welche Indikatoren zieht er dabei heran? Ist sein Vorgehen angemessen?
+Indikatoren:
+- Beteiligung and Wahlkampfaktivitäten seit ~1968 sinkend
+- Trends der politischen & kommunalen Beteiligung (von 1973 bis 1993 fallend)
+- durchschnittliche Mitgliederzahl von 32 wichtigen Bürgervereinigungen in den USA seit 1960 sinkend
+- Abwärtstrend bei der aktiven Organisationsmitarbeit
+- Kirchgangshäufigkeit seit 1958 sinkend
+- Gewerkschaftsmitgliedschaft 1952 auch Hochpunkt seit dem im Abwärtstrend
+- leichter Abwärtstrend im Bezug auf Nachbarschaftliche Beziehungen (Unternehmung mit jemand aus der Nachbarschaft)
+- Mitgliederzahlen in einem der größten Bowling Clubs seit ~1964 stark fallend
+- leichter Abwärtstrend bei Leuten die sagen, dass man den meisten Personen trauen kann anstelle von dass man nicht genug aufpassen kann im Umgang mit Menschen (-> zwischenmenschliches Vertrauen)
+
+Analysestrategie für Erosionsursachen:
+- mögliche Ursachen für Erosion müssen zunächst 4 Tests standhalten
+  - der verursachende Faktor muss mit Sozialkapital korrelieren
+  - Korrelation darf keine Scheinkorrelation sein
+  - verursachender Faktor muss sich über Zeit in der erwarteten Art und Weise verändern
+  - es muss ausgeschlossen werden können, dass der vermeintlich verursachende Faktor in Wirklichkeit eine Folge der Erosion des Sozialkapitals ist
+
+#### Was sind laut Robert Putnam die Ursachen der Erosion des Sozialkapitals in den USA?
+Die Hauptursachen für die Erosion des Sozialkapitals in den USA sind laut Robert Putnam:
+- der generationsbedingte Wandel (Generationszugehörigkeit)
+- die Verbreitung von Unterhaltungselektronik (TV Generation)
+- Sprawl (Suburbanisierung?)
+- die Arbeit im Sinne von steigender Erwerbstätigkeit aufgrund von ökonomischen Zwängen
+- sowie andere nicht gruppierbare Gründe 
