--- a/uni/sozi/3.md
+++ b/uni/sozi/3.md
@@ -24,11 +24,14 @@ Der Entscheidungsprozess der Wähler lässt sich mit dem **Funnel of Causality**
   - die Parteibindung als langfristiger Faktor und Themen & Personen als kurzfristige Einflussfakotren sind diesem vorgelagert
     - gruppenbezogene Einstellungen, Einstellungen zu den Parteien in Regierungsverantwortung, Kandidatenorientierung, Sachfragenorientierung (innen- und außenpolitisch)
     - in "The Voter Decides": Issue-Orientierung, Kandidatenorientierung und Parteiidentifikation
+  - die Wirkungsbeziehungen im funnel of causality sind tatsächlich so postuliert, dass die vorgelagerten Einflüsse in Form von Wertorientierungen und sozialstrukturellen Prädispositionen allein auf die Parteiidentifikation wirken
 
 #### Dem im „American Voter“ entwickelten Erklärungsansatz wurde häufig „psychologischer Reduktionismus“ vorgeworfen. Erläutern Sie bitte warum.
 Es wird bemängelt das die Variablen durch die das Wahlverhalten bestimmt werden soll nicht analytisch tiefgehende Erklärungen bieten, da sie sich analytisch auf einer Ebene befinden
 
-&nbsp;
+Campbell et. al hätten zu hohe Ansprüche und erwarten vielmehr Rationalität & Kultivierung als es realistisch wäre, infolgedessen wird die Rationalität der Wähler etwas kleingeredet
+
+Wähler verfügen über mehr Rationalität als *Them American Voter* ihnen zuspricht (Voters are not fools)
 
 &nbsp;
 
@@ -44,4 +47,9 @@ Es wird bemängelt das die Variablen durch die das Wahlverhalten bestimmt werden
 
 
 #### Wodurch unterscheidet sich die Studie „The American Voter“ in theoretischer und methodischer Hinsicht von der Studie „The People‘s Choice“?
-
+Verfahrenstechnische Unterschiede der Wahlstudien untereinander weisen auf konzeptionelle Unterschiede hin:
+- Unterscheidung nach Stichprobenbasis:
+  - *The Peoples Choice* konzentriert sich auf das Gebiet eines Verwaltungskreises (County)
+    - basiert auf sieben Wiederholungsbefragungen
+  - *American Voter* beruht auf Zufallsstichproben von Wählern aus allen Gegenden der USA
+    - die jeweils lediglich zweimal befragt wurden
