--- a/uni/sozi/2.md
+++ b/uni/sozi/2.md
@@ -1,4 +1,4 @@
-# 2. Sitzung: Hitlers Wähler (Jürgen Falter)
+# 2. Sitzung: The People's Choice (Paul Lazarsfeld)
 - Enstehungskontext war die amerikanische Präsidentschaftswahl vom 05.November 1940
 - Erkenntnisinteresse ist wie und warum der Wähler zu seiner Entscheidung kommt
 - „a person thinks, politically, as he is, socially.  Social characteristics determine political preference“ 
