--- a/uni/Systemtrafo/1_Sitzung_02-11-2017.md
+++ b/uni/Systemtrafo/1_Sitzung_02-11-2017.md
@@ -167,4 +167,29 @@ Typen totalitärer Regime
   - theokratische Legitimation zur Absicherung der pol. Herrschaft bei islamistischen totalitären Systemen nicht genügend sondern zusätliche Erhebung von Anspruch auf das gesellschaftliche Leben bis in die Intimsphäre der einzelen Bürger
   - Religion wird, wie im islamistischen Fundamentalismus, zu einer allumfassenden politischen Legitimationsideologie instrumentalisiert
 
-# 2. Typologie politischer Systeme
+# 2. Stabilität politischer Systeme
+Abstrakt lassen sich politische Systeme als die Gesamtheit von Strukturen (Institutionen) und Regeln (Verfahren) begreifen, die politische und gesellschaftliche Akteure (Parteien, Verbände, Organisationen, Individuen) in regelgeleitete Interaktionsbeziehungen zueinander setzt
+
+soll ein pol. System stabil sein, muss die innere Konstruktion der vielfältigen Wechselbeziehungen zw. Strukturen & Akteuren so angelegt sein, dass sie in der Lage sind jene Aufgaben zu lösen die aus der Umwelt (Wirtschaft, Gesellschaft) gestellt werden
+- aufgrund von Wandel erhebliche Anpassungs- und Wandlungsfähigkeiten von Nöten
+
+Leistung & Überlebensfähigkeit hängt von 5 essentiellen Herausforderungen ab:
+- politische & gesellschaftliche Integration (Integrationskapazität)
+- Ressourcenmobilisierung (Mobilisierungskapazität) 
+- die Aufrechterhaltung friedlich geregelter Beziehungen mit anderen Staaten (internationale Anpassungskapazität)
+- die Beteiligung der Bevölkerung am politischen Entscheidungsprozeß (partizipationskapazität)
+- die Verteilung des Sozialproduktes durch wirtschafts- und sozialpolitische Maßnahmen auch jenseits des Marktes (Distributionskapazität)
+
+um diesen Herausforderungen zu begegnen muss das pol. System Problemlösungskapazitäten auf einem systemerhaltenden Niveau entwickeln
+
+![pol](./img/pol.png "pol")
+
+- aus den Prozessfunktionen des politischen Systems geht der output hervor
+  - er besteht aus hoheitlich durchgesetzten politischen Entscheidungen wie Gesetzen, Erlassen und Verordnungen
+
+aufgrund ihrer inneren Konstruktion und höheren Fähigkeit systemrelevante Informationen zu prozessieren und Die endogene Stabilität demokratischer Systeme Unterstützung in der Bevölkerung zu mobilisieren, sind Demokratien längerfristig stabiler als Autokratien
+
+Vorteil von Demokratien ist automatisch implementierter "feed-back" Mechanismus der zu kontinuierlichen Lernprozessen führt
+- bei Scheitern der Regierung würde Opposition gewählt werden
+  - dies zwingt die Regierung zu Flexibiliät, Adaption und Innovation
+  - Institution der Wahlen ist ein sensibles Frühwarnsystem für die Regierenden sich nicht zu weit von den Wünschen der Bürger zu entfernen
