--- a/uni/Systemtrafo/2_Sitzung_09-11-2017.md
+++ b/uni/Systemtrafo/2_Sitzung_09-11-2017.md
@@ -7,3 +7,10 @@ Mit dritter Demokratisierungswelle (Mitte 70er) und dem Zusammenbruch der kommun
     - *Wann* spricht man von Reform, Wandel, Revolution oder Wechsel?
    
 ## 2.1 Regierung, Regime, Staat, System   
+Robert Fischman: es muss scharf getrennt werden zwischen der Transformation einer Regierung, eines Regimes oder eines Staates, da je nach dem (ob Wandel/Wechsel und Transformationssubjekt) tauchen spezifische Transformationsprobleme auf
+
+### 2.1.1 Regierung
+am wenigsten problematisch ist ein Regierungsswechsel
+- Regierungswechsel ist ohnehin konstitutiver Bestandteil und normal in etablierten Demokratien
+  - in jungen Demokratien ist erster *richtungs*politischer Wechsel der Regierung dennoch ein aufschlussreicher Testfall für Konsolidierungsfortschritte(Zusammenhalt) des neuen Systems
+Huntington zufolge erhebliche symbolische Bedeutung
