--- a/uni/Systemtrafo/2_Sitzung_09-11-2017.md
+++ b/uni/Systemtrafo/2_Sitzung_09-11-2017.md
@@ -13,4 +13,136 @@ Robert Fischman: es muss scharf getrennt werden zwischen der Transformation eine
 am wenigsten problematisch ist ein Regierungsswechsel
 - Regierungswechsel ist ohnehin konstitutiver Bestandteil und normal in etablierten Demokratien
   - in jungen Demokratien ist erster *richtungs*politischer Wechsel der Regierung dennoch ein aufschlussreicher Testfall für Konsolidierungsfortschritte(Zusammenhalt) des neuen Systems
-Huntington zufolge erhebliche symbolische Bedeutung
+
+Huntington zufolge erhebliche symbolische Bedeutung des ersten Regierungswechsel
+- aber insbesondere der zweite, *parteipolitische* Regierungswechsel ist signifikant
+
+Regierungswechsel auch innerhalb autoritärer & totalitärer Systeme möglich
+- bspw wenn Dikator/Partei/Junta/Clique den Regierungschef auswechselt (zB um eine verschlissene & unpopuläre Regierung abzulösen)
+  - kein eigentlicher Machtwechsel aber evtl. Richtungsveränderung der Politik
+
+im Allgemeinen sind Regierungswechsel in Dikaturen keine fundamentalen Machtwechsel
+- dennoch für ganzes Regime bedrohlich
+  - können zB Ausdruck einer internen Systemkrise sein
+  - gerade in kommunistischen Regimen ist pol. Führungswechsel häufig von machtpol. Kämpfen zw rivalisierenden Machtcliquen begleitet
+
+### 2.1.2 Regime
+Regime bezeichnen formelle & informelle Organisation des pol. Herrschaftszentrums einerseits und dessen jeweils besonders ausgeforme Beziehung zur Gesellschaft andererseits
+
+Regime definiert Zugänge zur pol. Herrschaft ebenso wie Machtbeziehung zw Herrschaftseliten & Verhältnis der Herrschaftsträger zu Herrschaftsunterworfenen
+- Machtbeziehungen müssen bis zu einem gewissen Grade institutionalisiert (akzeptiert, praktiziert und Verhalten der Herrschaftsträger normierend) sein
+  - erfolgreiche Institutionalisierung = Verleihung bestimmter Dauerhaftigkeit
+
+Regimecharakter setzt sich zusammen aus:
+- interne Herrschaftsorganisation
+- Beziehung zw Herrschaftsträgern & Herrschaftsunterworfenen
+
+Veränderung auch nur einer der beiden Dimensionen führt zu Destabilisierung und kann Auftakt zum Wandel (gar Wechsel) des Regimetyps bedeuten
+- so können Demokratien in autoritäre o totalitäre Regime übergehen (und vice versa)
+
+Wechsel ist vollzogen wenn sich Herrschaftszugang, Herrschaftsstruktur, Herrschaftsanspruch und Herrschaftsweise grundlegend geändert haben
+- bei Regimewechsel ändert sich weniger Organisationsform des Staates als Definition dessen was legitime oder illegitime Anwendung der staatl. Zwangsmittel sind
+  - nicht Staat als Regierungsform, sondern die ihn dirigierende Regimeform
+
+Regime sind dauerhaftere Formen pol Herrschaftsorganisation als es bestimmte Regierungen sein können
+- aber typischerweise kürzeren Bestand als der Staat
+
+Regime verkörpern Normen, Prinzipien & Verfahrensweisen der pol. Organisation des Staates
+
+### 2.1.3 Staat
+Staat übertrifft Regierungen und Regime in seiner Bestandsdauer
+- sehr dauerhafte Herrschaftsstruktur
+
+schließt in seinem Kern die legitimen oder illegitimen Zwangsmittel ein, die notwendig sind um eine Gesellschaft zu regieren & um die dafür notwendigen Ressourcen (Steuern, Zustimmung, Unterstützung) aus dieser zu ziehen
+
+Herrschaftsmonopol & Herrschaftsinstrumentarium des Staates versetzt Regierungen erst in die Lage zu regieren
+
+formale Strukturen des Staates bleiben bei politischen Transformationen oft verschont
+- in ihrer Struktur kaum zu unterscheidene Staatsapparate können einem demokr. System genauso dienen, wie sie vorher einem autoritären Regime gedient haben
+  - gilt nicht nur für staatl. Organisationsform sondern bis in die staatl. Funktionsträger hinein
+  - häufig findet sich nach Regierungswechsel staatl. Verwaltungspersonal & alte pol Eliten der "zweiten" Reihe in ihren alten Funktionsbereichen wieder
+
+### 2.1.4 System
+pol System ist der umfassendeste von allen vier Begriffen
+- umfasst Regierung, Regime und Staat
+- kann vielfältigen Interdependenzen der Transformationsprozesse politischer, wirtschaftlicher, sozialer & kultureller Teilsysteme in das analytische Blickfeld rücken
+- auch spezifischer da sich Systembegriff auch auf jedes einzelne funktional abgrenzbare Teilsystem anwenden lässt
+
+Systembegriff erlang mit Zusammenbruch der kommunistischen Regime wieder erheblich an Bedeutung
+
+Systembegriff birgt größtes heuristisches Potential, weil er am engsten mit Legitimitäts- und Stabilitätsfrage pol. Ordnungen verknüpft ist
+- über ihn lassen sich systematisch Zusammenhänge zw. Dysfunktionen einzelner Teilbereiche & dem für das "Überleben" des Gesamtsystem wichtigen Gleichgewichts erkennen
+
+Easton zufolge gerät ein pol System unter Transformationsdruck und wird instabil, wenn die Summe beider Legitimitätsquellen (diffuse + spezifische) unter ein bestanderhaltenes Maß sinkt
+
+## 2.2 Systemwandel, Systemwechsel, Transition, Transformation
+*Wie* gestaltet sich der Übergang von einem Regime o System zu einem anderen Regime- oder Systemtyp?
+
+### 2.2.1 Systemwandel
+Beginn grundlegender Veränderung von Funktionsweisen & Strukturen eines Systems 
+- solcher Veränderungsprozess verläuft evolutionär, d.h. allmählich & nich abrupt
+- zunächst offen ob Prozess des Wandels zu anderem Systemtypus führt
+  - wenn ja, dann kann ex post von einem vollzogenen Systemwechsel gesprochen werden, wenn sich Herrschaftszugang, Herrschaftsstruktur, Herrschaftsanspruch und Herrschaftsweise fundamental geändert haben (Bspw Spanien 1975-1978, Brasilien 1978-1985)
+
+Wandlungsprozess kann nach Ausschaltung externer & interner Störfaktoren wieder zu einem relativ stabilen Gleichgewicht desselben Systemtypus zurückführen
+- in solchem Fall führt der Systemwandel nicht zum Systemwechsel
+
+### 2.2.2 Systemwechsel
+Steht im Gegensatz zum Systemwandel für Transformationsprozesse die definitiv zu einem anderen Systemtypus führen
+
+laut Großteil der Literatur ist Systemwechsel = "zeitlich dramatiserte" Übergänge vom einen zum anderen System
+
+entscheidend bleibt, dass nur von einem Systemwechsel gesprochen werden kann, wenn sich Herrschaftszugang, Herrschaftsstruktur, Herrschaftsanspruch und Herrschaftsweise eines Systems grundsätzlich verändert haben
+
+### 2.2.3 Transition
+Transitionskonzept entstammt einem Forschungsprojekt der 80er Jahre, dass insbesondere auf die Demokratisierungsprozesse in Lateinamerika und Südeuropa angewendet wurde
+
+beudetet Übergang aber wird fast ausschließlich verwendet um Übergang von autokratischen zu demokratischen Systemen zu bezeichen (= Übergang zur Demokratie)
+
+politikwissenschaftliche Erforschung der Demokratisierungsprozesse in Südeuropa + Lateinamerika hat großen Verdienst und Stärke bzgl zweier Sachverhalte:
+- zum einen widmet sie Rolle von Akteuren in Übergängen zur Demokratie besonderes Augenmerk
+- zum anderen entwickelt sie erstmals eine systematische Periodisierung des Transitionsprozesses
+
+### 2.2.4 Transformation
+keine spezifische Bedeutung sondern Oberbegriff für alle Formen, Zeitstrukturen & Aspekte des Systemwechsels
+- schließt also Regimewandel, Regimewechsel, Systemwandel, Systemwechsel oder Transition mit ein
+
+# 3. Transformationstheorien
+erst wenn Begriffe untereinander in systematischer Art und Weise verbunden & in Beziehung gesetzt werden kann man von Theorien sprechen
+
+theorieorientierte Transformationsforschung lässt sich schon auf 50er und 60er Jahre zurückfahren
+
+vier große Theoriestränge:
+- Systemtheorien
+- Strukturtheorien
+- Kulturtheorien
+- Akteurstheorien
+
+## 3.1 Systemtheorien
+Systemtheorien erhellen insbesondere den Zusammenhang von funktionalen Erfordernissen sozioökonomischer Systeme und der Herausbildung von sozialen & pol. Strukturen, die diese Anforderungen erfüllen
+
+entwickeln ihre besondere Erklärungskraft, wenn es um für die Transformation ursächlichen Dysfunktionen des alten (autokratischen) Systems und die sozioökonomischen Möglichkeitsbedingungen des neuen (demokratischen) Systems geht
+
+lässt sich im Hinblick auf Transformationstheorien in drei unterschiedliche Stränge gliedern
+
+### 3.1.1 Systemtheorie Parsons
+moderne soziologische Systemtheorie geht auf Talcott Parson zurück, der Theorem der funktionalen Differenzierung einführt
+
+Entwicklung von traditionalen zu modernen Gesellschaften als Ausdifferenzierung von sozialen Teilsystemen:
+- ausgehend von industrieller Revolution setzte sich Differenzierung von Ökonomie & pol Herrschaft, pol System & ziviler Gesellschaft, sowie Ablösung sozialer Normen von religiösen Begründungen in westlichen Gesellschaften durch
+  - aus diesem Differenzierungsprozess hat sich Grundstruktur moderner Gesellschaften herausgebildet
+
+Weg in Moderne führt über Ausdifferenzierung von vier zentralen Funktionssystemen:
+- Wirtschaft (Anpassung)
+- Politik (Zielerreichung)
+- soziale Gemeinschaft (Integration)
+- Kultur (Erhaltung von Wertmustern)
+
+Parson legt diesen Weg normativ wie geschichtlich fest (-> universeller Charakter)
+- nur wenn Gesellschaften bestimmte "evolutionäre Universalien" ausbilden, können sie langfristig das Niveau ihrer Anpassungskapazität an die Umwelt & damit ihre eigene Existenz sichern
+  - zu wichtigsten Universalien zählt er Bürokratie, Marktorganisation, universalische Normen im Rechtssystem, demokratisches Assoziationsrecht & allgemeine freie Wahlen
+
+wenn zentrale evolutionäre Universalien fehlen, kann es sein, dass das pol. System nicht mehr die notwendige Selektionsleistung der Reduktion der ansteigenden Umweltkomplexität erbringen kann
+- Legitimität wird untergraben und System wird instabil
+
+Strukturwandel wird konsequent auch als Wandel der normativen Kultur definiert
