--- a/uni/Systemtrafo/2_Sitzung_09-11-2017.md
+++ b/uni/Systemtrafo/2_Sitzung_09-11-2017.md
@@ -146,3 +146,11 @@ wenn zentrale evolutionäre Universalien fehlen, kann es sein, dass das pol. Sys
 - Legitimität wird untergraben und System wird instabil
 
 Strukturwandel wird konsequent auch als Wandel der normativen Kultur definiert
+
+je funktional differenzierter eine Gesellschaft wird, desto wichtiger sei eine effetkive pol Organisation (..) v.a hinsichtlich ihrer Unterstützung einer universalistischen Rechtsordnung
+- aus dieser Perspektive sei nicht die allgemeine Legitimierung von Macht + Herrschaft die besondere Leistung demokr. Institutione, sondern die Vermittlung von Konsensus über die Ausübung von Macht
+  - keine Institution, die sich von demokr Institutionen grundlegend unterscheidet, sei zu dieser Leistung in der Lage
+
+Parson thematisiert damit die beiden entscheidenen Aspekte der Stabilität pol Systeme
+- funktionale Differenzierung der Gesellschaft
+- ausreichende Legitimationszufuhr aus Gesellschaft für pol Herrschaftsform
