--- a/uni/Systemtrafo/2_Sitzung_09-11-2017.md
+++ b/uni/Systemtrafo/2_Sitzung_09-11-2017.md
@@ -154,3 +154,29 @@ je funktional differenzierter eine Gesellschaft wird, desto wichtiger sei eine e
 Parson thematisiert damit die beiden entscheidenen Aspekte der Stabilität pol Systeme
 - funktionale Differenzierung der Gesellschaft
 - ausreichende Legitimationszufuhr aus Gesellschaft für pol Herrschaftsform
+
+### 3.1.2 Autopoietische Systemtheorie Luhmanns
+Luhmann radikalisiert das Parsonsche Theorem der funktionalen Differenzierung
+- Parsons Vorstellung der hierarchischen Position des pol Systems über den anderen gesellschaftlichen Teilsystemen sei eine Illusion
+
+kein Funktionssystem kann für ein anderes einspringen, ein anderes ersetzen oder entlasten
+- dies gilt auch für die Politik ggü den Teilsystemen
+
+je weiter politische Regime zum totalitären Pol tendieren, um so mehr wird die für Effizienzsteigerung notwendige funktionale Differenzierung gesellschaftlicher Teilsysteme gehemmt
+- dies geschieht meist über politische Einflussnahme in die Teilgebiete und führt zu Regressionen im Wirtschafts-, Recht- und Wissenschaftssystem
+- diese enge Kopplung von Politik und Teilsysteme hat zur Folge, dass Effizienzverluste & Funktionskrisen in Teilsystemen auch auf das pol. System durchschlagen
+
+wird die funktionale Differenzierung der gesellschaftlichen Teilsysteme längerfristig blockiert, führt dies zu Effizienz- und Legitimationskrisen, die die Stabilität des Systems untergraben
+- allerdings wirkt auch eine gezielte Förderung der funktionalen Differenzierung durch autokratische Herrschaftseliten systemdestabilisierend
+
+### 3.1.3 Modernisierungstheorie
+aufbauend auf Parsons Theorem hat Seymour Martin Lipset den modernisierungstheoretischen Ansatz für Erfolgsbedingungen demokratischer Systeme entwickelt
+
+die wichtigste Erfolgsbedingung erfolgreicher Demokratisierung sei die wirtschaftliche  Entwicklung & Überwindung von Not & Armut
+
+Lipset formuliert klare Wechselbeziehungen zwischen sozioökonomischer Entwicklungsstufe und Demokratiefähigkeit einer Gesellschaft
+
+zahlreiche Studien zeigen, dass das wirtschaftliche Entwicklungsniveau (gemessen am BIPpro Kopf) als die wichigste einzelne Variable zur Erklärung des Demokratisierungsgrades eines Landes angesehen werden muss
+- je entwickelter ein Land wirtschaftlich ist, desto geringer ist die Wahrscheinlichkeit, dass dort eine Diktatur existiert
+
+F81
