--- a/uni/Systemtrafo/2_Sitzung_09-11-2017.md
+++ b/uni/Systemtrafo/2_Sitzung_09-11-2017.md
@@ -178,5 +178,31 @@ Lipset formuliert klare Wechselbeziehungen zwischen sozioökonomischer Entwicklu
 
 zahlreiche Studien zeigen, dass das wirtschaftliche Entwicklungsniveau (gemessen am BIPpro Kopf) als die wichigste einzelne Variable zur Erklärung des Demokratisierungsgrades eines Landes angesehen werden muss
 - je entwickelter ein Land wirtschaftlich ist, desto geringer ist die Wahrscheinlichkeit, dass dort eine Diktatur existiert
+- allerdings kann man von statistischer Korrelation nicht direkt auf Kausalitäten schließen
 
-F81
+Erklärungskraft der modernisierungstheoretischen Demokratisierungsthese über 3 Fragen:
+- Welche sozialen Sachverhalte verbergen sich hinter dem BIP per capita?
+  - ein relativ hohes Niveau sozioökonomischer Entwicklung gemessen an Indikatoren wie allgemeines Bildungsniveau, Urbaniserung, technische Informations- und Kommunikationsmittel
+  - hohe vertikale Mobilität (durchlässige Klassenstruktur, soziale Aufstiegschancen)
+  - große Mittelschicht und Arbeiter- und Unterschicht, die nicht existentiell bedroht sind
+  - ausreichender Ausbildungsstand
+  - hohes Organisations- und Partizipationsniveau in Vereinen & Verbänden (soziales Kapital)
+  - neu: Einkommensverteilung, die die Gesellschaft nicht in extrem arme & reiche Gruppen teilt
+- Sind diese Sachverhalte "Requisiten", also notwendige Voraussetzungen für das Entstehen & den Bestand der Demokratie?
+  - für Lipset weder notwendige, gar hinreichende Bedingungen für Demokratie
+  - Demokratisierungsprozess in Gesellschaften ohne diese Requesiten allerdings äußerst gering
+- Gibt es eine kausale Beziehung zw ökonomischer Entwicklung und Demokratie?
+  - Beziehung zw ökonomischer Modernisierung & Demokratie ist *kausal*, aber nicht *monokausal*
+    - ökon. Modernisierung ist für Demokratisierung eines pol Systems nicht hinreichend und nicht einmal in jedem einzelnen Falle notwendig, aber im Requisitenbündel der Demokratie ist sie jene Voraussetzung, die autokratische Systeme herausfordert und demokratisierungswillige Akteure stärkt
+
+Mängel & Blindstellen
+- Modernisierungsstand bei dem Übergang zur Demokratie mit hoher Wahrscheinlichkeit beginnt, kann nur sehr unzureichend angegeben werden
+  - Bandbreite von 1000 bis 6000 US$ Einkommen per capita ist zu groß und zeigt Grenzen monokausaler Erklärungen
+- Einleitung & Ursachen von Demokratisierungsprozessen in unterentwickelten Systemen wird nicht erklärt
+- keine Erklärungen für Zusammenbruch demokratischer Systeme in sozioökonomisch hoch entwickelten Gesellschaften
+
+
+
+## 3.2 Strukturtheorioen
+### 3.2.1 Der neomarxistische Strukturalismus
+F86
