--- a/uni/Systemtrafo/2_Sitzung_09-11-2017.md
+++ b/uni/Systemtrafo/2_Sitzung_09-11-2017.md
@@ -204,5 +204,51 @@ Mängel & Blindstellen
 
 
 ## 3.2 Strukturtheorioen
+die strukturalistische Transformationsforschung betont die sozio- und machtstrukturellen Zwänge, denen politische Transformationsprozesse unterliegen
+
 ### 3.2.1 Der neomarxistische Strukturalismus
-F86
+Erfolg oder Misserfolg von Demokratisierungs- und Konsolidierungsprozessen wird als Resultat langfristiger Verschiebungen in den Machtstrukturen einer Gesellschaft angesehen
+
+entgegen der soziologischen Modernisierungstheorie wird betont, dass mehrere Pfade zur Modernisierung einer Gesellschaft führen können
+- Demokratie nicht als zwangsläufiges, sondern als mögliches Ergebnis von Veränderungen des Verhältnisses zwischen sozialen Klassen einer Gesellschaft (Moore)
+
+Ob es zur Demokratie kommt sei von fünf Faktoren abhängig:
+- Machtverteilung innerhalb der Eliten
+- ökonomische Basis der agrarischen Oberschicht
+- Konstellation von Klassenkoalitionen
+- Machtverteilung zwischen sozialen Klassen
+- Autonomie des Staates ggü den dominanten Klassen
+
+als treibende gesellschaftliche Kraft der demokratischen Entwicklung sieht Moore das **Wirtschaftsbürgertum**
+- dessen Stellung als kraftvolle, unabhängige Klasse ist die *notwendige* Voraussetzung für die Demokratie ("Ohne Bourgeoisie keine Demokratie")
+- demokratiefördernd handelt die Bourgeoisie in der Regel allerdings nur, wenn sie ggü der Landaristokratie über ausreichende (wirtschaftl.) Selbstständigkeit verfügt
+
+aufgrund von Kritig ggü einiger Prämissen des Modells von Moore haben Rueschemeyer et al die strukturalistischen Überlergungen modifiziert, weiterentwickelt und erweiterten die strukturalistische Perspektive vor allem um zwei Variablen, die die Chancen zur Etablierung & Konsolidierung einer Demokratie beeinflussen sollen
+- Klassenstrukturen und -koalitionen
+- Machtverhältnis zwischen Staat und Zivilgesellschaft
+
+### 3.2.1 Das Theorem der Machtdispersion
+Strukturtheorie lässt sich durch den quantitativ orientierten Machtressourcen- bzw. Machtdispersionsansatz ergänzen
+
+versucht Machtverteilung präziser, als mit einer Klassen- und Staatstheorie, zu erfassen
+
+Augenmerk hinsichtlich der Entwicklungschancen einer Demokratie liegt auf *Streuung* der Machtressourcen in Wirtschaft & Gesellschaft
+
+aufbauend auf Robert Dahls Polyarchie-Konzept entwickelt Vanhanen die These, dass je breiter die Streuung der Machtressourcen in einer Gesellschaft ist, um so höher sei deren Demokratisierungsgrad
+- anders formuliert: je höher die Machtkonzentration in einer Gesellschaft, um so höher sind die Hindernisse auf dem Weg zur Demokratie
+- denn: Demokratisierungsprozesse erfolgsversprechend, wenn Machtressourcen so breit gestreut sind, dass keine Gruppe in der Lage ist ihre sozialen Konkurrenten oder andere Gruppen zu unterdrücken
+
+zur Messung der Machtressourcenstreuung *index of power resources* (IPR, Machtressourcenindex)
+- Minimum bei 0, Maximum bei 100
+- besteht aus drei Komponenten, die die Dispersion von wirtschaftlichen/kognitiven/beruflichen Ressourcen innerhalb einer Gesellschaft messen
+  - Urbaniserungsgrad
+  - Verteilung der Wissens- und Bildungsressourcen
+  - Verteilung des Landbesitzes und anderer ökonomischer Ressourcen
+
+Kritik:
+- soziale Klassen sind nicht automatisch einheitlich handelne kollektive Akteure, wie es teilweise dargestellt wird
+- strategisches Handeln von Eliten im Laufe von Transformationsprozessen wird nicht hinreichend erfasst
+- religiös-kulturelle Einbettung von Klassenbeziehung, Staatshandeln und Machtverteilung wird nicht berücksichtigt
+
+## 3.3 Kulturtheorien
+F92
